omp implementation; chunks subdivision

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,12 @@ include(CMakeLists.local.txt OPTIONAL)
 
 find_package(OpenCV REQUIRED)
 
-add_executable(acaproject main.cpp sobel.h common.h)
+find_package(OpenMP REQUIRED)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
+
+add_executable(acaproject main.cpp sobel.h common.h omp_sobel.h sobel_seq.h)
 target_link_libraries(acaproject ${OpenCV_LIBS})
